Edited hover color on icons, background image sizing

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Projects">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">For Fun</a></li> <br><br><br><br><br><br>
+                    <li class="nav-item" style="padding-bottom: 20%;"><a class="nav-link js-scroll-trigger" href="#interests">For Fun</a></li> 
                     <li class="nav-item"><a class="nav-link btn btn-sm btn-primary py-0 px-0" target="_blank" href="media/resume_jonathan_mo.pdf" download="resume_jonathan_mo" style="color:white">Download CV<i class="fas fa-download"></i></a></li> <br>
                     <li>
                         <div class="social-icons">
@@ -172,7 +172,7 @@
                     </div>
                 </div>
             </section>
-
+            <hr class="m-0" />
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
