--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <h3 class="mb-0">University of Virginia</h3>
                             <div class="subheading mb-3">Bachelor of Science, Computer Science</div>
                             <p style="color: rgb(71, 71, 71)">Cumulative GPA: 3.6, Major GPA: 3.9</p>
-                            <p>Activities: UVA Club Tennis Travel Team, Madison House Volunteering, Undergraduate Teaching Assistants <br>Projects: Deans List (Spring 2019-Present)</p>
+                            <p>Activities: UVA Club Tennis Travel Team, Madison House Volunteering, Undergraduate Teaching Assistants <br>Honors: Deans List (Spring 2019-Present)</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary date">August 2018 - May 2022</span></div>
                     </div>
@@ -128,7 +128,7 @@
                             <div class="subheading mb-3">Advanced Diploma</div>
                             <p style="color: rgb(71, 71, 71)">GPA: 4.41</p>
                             <p>Activities: Varsity Tennis Team, National Honor Society, National Math Honor Society, Key Club <br>
-                                Projects: AP Scholar, Varsity Tennis Captain, Varisty Tennis Leadership Award, MVP Doubles Team</p>
+                                Awards & Honors: AP Scholar, Varsity Tennis Captain, Varisty Tennis Leadership Award, MVP Doubles Team</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary date">August 2014 - June 2018</span></div>
                     </div>
