added meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="author" content="Jonathan Mo">
+        <meta name="description" content="Jonathan Mo CV">
+        <meta name="keywords" content="Jonathan Mo, University of Virginia, UVA, Computer Science, GitHub">
         <title>Jonathan Mo CV</title>
         <link rel="icon" type="image/x-icon" href="media/earth.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -192,7 +195,7 @@
                     <u>Hip-Hop:</u> Outkast, Kanye West, MF Doom, 50 Cent <br>
                     <u>Alternative:</u> Cage the Elephant, Hippocampus, Arctic Monkeys, Rex Orange County <br>
                     <u>Rap:</u> The Weeknd, Mac Miller, Chance the Rapper, Lil Uzi Vert <br>
-                    Please feel free to email me if you have music recommendations, I'm always in search of new music! <br> <br>
+                    Please feel free to email me if you have music recommendations, I'm always in search of new music! <a target="_blank" rel="noopener noreferrer" href="https://open.spotify.com/user/jonathanwm8?si=hsc08XoPR0Sytx5yXvDcgg">Spotify</a><br> <br>
 
                     In terms of TV Shows, I'll always love the Office, That 70's Show, Master of None to name a few. 
                     </p> <br>
