--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li class="nav-item"><a class="nav-link btn btn-sm btn-primary py-0 px-0" target="_blank" href="media/resume_jonathan_mo.pdf" download="resume_jonathan_mo" style="color:white">Download CV<i class="fas fa-download"></i></a></li> <br>
                     <li>
                         <div class="social-icons">
-                            <a class="social-icon" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/jonathan-mo-897276173/"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="social-icon" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/jonathanmo/"><i class="fab fa-linkedin-in"></i></a>
                             <a class="social-icon" target="_blank" rel="noopener noreferrer" href="https://github.com/jonathanwmo/"><i class="fab fa-github"></i></a>
                             <a class="social-icon" target="_blank" rel="noopener noreferrer" href="mailto:jm9hx@virginia.edu"><i class="fa fa-envelope"></i></a>
                         </div>
