--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Incoming Software Engineer Intern </h3>
+                            <h3 class="mb-0">Software Engineer Intern </h3>
                             <div class="subheading mb-3">Capital One</div>
-                            <p>Accepted offer to intern at Capital One in McLean, VA for Summer 2021.</p>
+                            <p>Worked on a team of 3 other interns to improve an existing Agile Maturity Assessment internal tool. We utilized Angular to implement a client-side redesign of the dashboard page to better fit the use of Agile Leads and Product Managers. Also used Java Spring Boot to add new server-side features and refactor PostgreSQL database tables for more efficient queries. Finally, had the chance to learn a plethora of other technologies: WireMock, Mockito Unit Testing, Docker, API Endpoint Registration, and AWS Deployment Pipelines. 
+</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary date">June 2021</span></div>
                     </div>
@@ -107,7 +108,7 @@
 
                     <!-- Skills-->
                     <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <h6 style="color:0b467ab2 !important;">Python, Java, JavaScript, C++, HTML, CSS, Git, Bash, SQL</h6> 
+                    <h6 style="color:0b467ab2 !important;">C++, Java, Python, PHP, TypeScript, SQL, Git, Bash, Django, Angular, Java Spring Boot, AWS.</h6> 
                 
                 </div>
             </section>
