--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <p>Worked on a team of 3 other interns to improve an existing Agile Maturity Assessment internal tool. We utilized Angular to implement a client-side redesign of the dashboard page to better fit the use of Agile Leads and Product Managers. Also used Java Spring Boot to add new server-side features and refactor PostgreSQL database tables for more efficient queries. Finally, had the chance to learn a plethora of other technologies: WireMock, Mockito Unit Testing, Docker, API Endpoint Registration, and AWS Deployment Pipelines. 
 </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary date">June 2021</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary date">June 2021 - August 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
