--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div class="subheading mb-5">
                             University of Virginia · Charlottesville, VA · Virginia Beach, VA · <a href="tel:757-918-6869">757-918-6869</a> · <a href="mailto:jm9hx@virginia.edu">jm9hx@virginia.edu</a>
                         </div>
-                        <p>My name is Jonathan, I am currently a third year undergraduate student at the University of Virginia School of Engineering and Applied Sciences. </p>
+                        <p>My name is Jonathan, I am currently a fourth year undergraduate student at the University of Virginia School of Engineering and Applied Sciences. </p>
                         <p>My academic interests include web/mobile development, machine learning, cloud computing, and data analysis. Outside of school I love to play tennis, listen to music, snowboard, surf, and cook.
                         </p>
                     </div>
