--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <div class="social-icons">
                             <a class="social-icon" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/jonathanmo/"><i class="fab fa-linkedin-in"></i></a>
                             <a class="social-icon" target="_blank" rel="noopener noreferrer" href="https://github.com/jonathanwmo/"><i class="fab fa-github"></i></a>
-                            <a class="social-icon" target="_blank" rel="noopener noreferrer" href="mailto:jm9hx@virginia.edu"><i class="fa fa-envelope"></i></a>
+                            <a class="social-icon" target="_blank" rel="noopener noreferrer" href="mailto:jonathanwm8@gmail.com"><i class="fa fa-envelope"></i></a>
                         </div>
                     </li>
                 </ul>
@@ -55,9 +55,9 @@
                     <div class="resume-section-content"> 
                         <h2 class="mb-5">About Me</h2>
                         <div class="subheading mb-5">
-                            University of Virginia · Charlottesville, VA · Virginia Beach, VA · <a href="tel:757-918-6869">757-918-6869</a> · <a href="mailto:jm9hx@virginia.edu">jm9hx@virginia.edu</a>
+                            University of Virginia · Charlottesville, VA · Virginia Beach, VA · <a href="tel:757-918-6869">757-918-6869</a> · <a href="mailto:jonathanwm8@gmail.com">jonathanwm8@gmail.com</a>
                         </div>
-                        <p>My name is Jonathan, I am currently a fourth year undergraduate student at the University of Virginia School of Engineering and Applied Sciences. </p>
+                        <p>My name is Jonathan, I am currently an Associate Software Engineer at Capital One, recent graduate from the University of Virginia School of Engineering and Applied Sciences. </p>
                         <p>My academic interests include web/mobile development, machine learning, cloud computing, and data analysis. Outside of school I love to play tennis, listen to music, snowboard, surf, and cook.
                         </p>
                     </div>
